# intersection-of-triangles-3D

./: CMakeLists.txt  geom_obj.cpp  geom_obj.hpp  octree.cpp  octree.hpp  random_tester.py  test.txt  triangle.cpp
tests/: test_10_tr.txt  test_3_tr.txt  test_4_tr.txt  test_parall_planes.txt  test_plane.txt  test_plane1.txt  test_plane2.txt  test_same_plane.txt  test_segm_in_tr.txt  test_tree.txt
